<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/drawer">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:id="@+id/interval_rg"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="15dp">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_hour"
            android:textColor="@color/black"
            android:id="@+id/interval_1"
            android:gravity="center_horizontal|center_vertical"
            />

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/every_3"
        android:textColor="@color/black"
        android:id="@+id/interval_3"
        android:gravity="center_horizontal|center_vertical"
        />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_6"
            android:textColor="@color/black"
            android:id="@+id/interval_6"
            android:gravity="center_horizontal|center_vertical"
            />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/every12"
            android:textColor="@color/black"
            android:id="@+id/interval_12"
            android:gravity="center_horizontal|center_vertical"
            />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/every24"
            android:textColor="@color/black"
            android:id="@+id/interval_24"
            android:gravity="center_horizontal|center_vertical"
            />

     </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        android:id="@+id/interval_save"
        android:background="@color/drawer"/>

</LinearLayout>