<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_drawer">


    <android.support.v7.widget.Toolbar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:id="@+id/setting_toolbar">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:paddingBottom="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync"
            android:textSize="20sp"
            android:id="@+id/textView6" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_marginTop="3dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:layout_gravity="center_horizontal" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_sync"
            android:textSize="20sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="left"
            android:id="@+id/setting_switch" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_interval"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:id="@+id/setting_interval"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:id="@+id/textView16" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:layout_gravity="center_horizontal" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_protection"
            android:textSize="20sp"
            android:gravity="left"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/setting_switch_lock" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/setting_language"
            android:layout_gravity="center_horizontal" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_song"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/setting_alarm_tone"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:id="@+id/textView7" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:layout_marginTop="3dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_account"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:id="@+id/setting_manage_account"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:id="@+id/textView8" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1"
            android:layout_marginTop="3dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:id="@+id/setting_rate"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_service"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:id="@+id/setting_terms"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/license"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:id="@+id/setting_licence"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:id="@+id/setting_about"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
    </ScrollView>

</LinearLayout>