<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_drawer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The Notebook"
        android:textSize="50sp"
        android:gravity="left"
        android:id="@+id/textView"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feel_the_difference"
        android:textSize="20sp"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:maxLines="1"
        android:hint="@string/email"
        android:gravity="left"
        android:id="@+id/signup_email"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/signup_password"
        android:layout_alignStart="@+id/signup_password"
        android:layout_marginTop="110dp"
        android:layout_alignRight="@+id/signup_password"
        android:layout_alignEnd="@+id/signup_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:maxLines="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/password"
        android:id="@+id/signup_password"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/signup_email"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:maxLines="1"
        android:id="@+id/signup_cpassword"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/signup_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_to_terms"
        android:id="@+id/signup_agree"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/signup_terms"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_service"
        android:id="@+id/signup_terms"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/signup_signup"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:background="@color/toolbar"
        android:id="@+id/signup_signup"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="63dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account_already"
        android:id="@+id/signup_have_account"
        android:clickable="true"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>