<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seller">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/special_offers"
        android:gravity="center_horizontal"
        android:textSize="90sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/seller_name"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/seller_button"
            android:text="@string/monthly"
            android:id="@+id/upgrade_monthly"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="57dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/seller_button"
            android:text="@string/Yearly_off"
            android:id="@+id/upgrade_yearly"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/upgrade_monthly"
            android:layout_centerHorizontal="true" />
</RelativeLayout>